--- a/index.html
+++ b/index.html
@@ -2,10 +2,17 @@
     <head>
         <meta charset="utf-8">
         <title>Guess Who?</title>
+        <script src="jquery.js"></script>
         <script src="data.js"></script>
         <script src="client.js"></script>
     </head>
     <body>
+        <div id="name-prompt">
+            
+        </div>
+        <div id="img-container">
+
+        </div>
         
     </body>
 </html>
